<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_link">www.nordicsemi.com</string>
    <string name="about_text">nRF Connect (formerly known as nRF Master Control Panel) is a powerful generic tool that allows you to scan for Bluetooth Low Energy devices and communicate with them. nRF Connect supports a number of Bluetooth SIG adopted profiles as well as the Device Firmware Update profile (DFU) from Nordic Semiconductor.</string>
    <string name="action_abort">Abort</string>
    <string name="action_add_characteristic">ADD CHARACTERISTIC</string>
    <string name="action_add_descriptor">ADD DESCRIPTOR</string>
    <string name="action_add_service">ADD SERVICE</string>
    <string name="action_autoconnect">Connect with autoConnect</string>
    <string name="action_bond">Bond</string>
    <string name="action_clear">CLEAR</string>
    <string name="action_clone">CLONE</string>
    <string name="action_connect">CONNECT</string>
    <string name="action_connect_with_phy">Connect with preferred PHY</string>
    <string name="action_details">Details</string>
    <string name="action_devzone">Developer Zone</string>
    <string name="action_dfu">DFU</string>
    <string name="action_done">DONE</string>
    <string name="action_eddystone_add_eik">PAIR CURRENT EID SLOT</string>
    <string name="action_edit">EDIT</string>
    <string name="action_enable">ENABLE</string>
    <string name="action_facebook">Facebook</string>
    <string name="action_linkedin">LinkedIn</string>
    <string name="action_more">MORE</string>
    <string name="action_open">OPEN</string>
    <string name="action_open_tab">OPEN TAB</string>
    <string name="action_open_uri">OPEN</string>
    <string name="action_raw">RAW</string>
    <string name="action_read_more">READ MORE</string>
    <string name="action_settings">Settings</string>
    <string name="action_skip">SKIP</string>
    <string name="action_twitter">Twitter</string>
    <string name="action_unbond">Delete bond information</string>
    <string name="action_undo">Undo</string>
    <string name="action_youtube">YouTube</string>
    <string name="ad_done">OK</string>
    <string name="ad_learn_more">LEARN MORE</string>
    <string name="added">Added:</string>
    <string name="address">Device address:</string>
    <string name="adv_action_add">ADD RECORD</string>
    <string name="adv_advertising_mode">Advertising mode:</string>
    <string name="adv_advertising_tx_power">TX power:</string>
    <string name="adv_alert_cloned_message">You have cloned the advertising packet of a device. However, the Android API does not allow for a full customization of the data. For example, if the Complete Local Name is set, it will use the phone\'s name. The TX Power Level will have the actual TX power level. Flags are added automatically by the system and the Appearance can\'t be set. Additionally, due to an Android bug, advertising data and the scan response data may have just a single instance of Service Data and Manufacturer Data per packet. \n\nFind your newly cloned packet in the ADVERTISER tab.</string>
    <string name="adv_alert_cloned_title">Information</string>
    <string name="adv_alert_cloned_toast">Advertising data cloned</string>
    <string name="adv_alert_title_edit">Edit advertising packet</string>
    <string name="adv_alert_title_new">New advertising packet</string>
    <string name="adv_bug_service_data_16">Caution: Android may truncate this UUID to a 16-bit UUID.</string>
    <string name="adv_company_id_info">The table of Bluetooth SIG members Company Identifiers may be found here: https://www.bluetooth.org/en-us/specification/assigned-numbers/company-identifiers</string>
    <string name="adv_connectible">Connectable</string>
    <string name="adv_deleted">Record deleted</string>
    <string name="adv_interval">Adv. Interval</string>
    <string name="adv_name">Display name</string>
    <string name="adv_name_template">%s - copy</string>
    <string name="adv_new_include_local_name">Complete Local Name</string>
    <string name="adv_new_include_tx_power">TX power</string>
    <string name="alert_category_0">Simple Alert</string>
    <string name="alert_category_1">Email</string>
    <string name="alert_category_2">News</string>
    <string name="alert_category_3">Call</string>
    <string name="alert_category_4">Missed Call</string>
    <string name="alert_category_5">SMS/MMS</string>
    <string name="alert_category_6">Voice Mail</string>
    <string name="alert_category_7">Schedule</string>
    <string name="alert_category_8">High Priority Alert</string>
    <string name="alert_category_9">Instant Message</string>
    <string name="alert_supported_categories_title">Select supported categories:</string>
    <string name="dfu_application">Application (0x04)</string>
    <string name="dfu_bootloader">Bootloader (0x02)</string>
    <string name="dfu_complete">Complete (0x01)</string>
    <string name="dfu_init_mode_label">Specify Init param:</string>
    <string name="dfu_none">None</string>
    <string name="dfu_number_of_packets_hint">Number of packets</string>
    <string name="dfu_number_of_packets_label">Provide number of packets of firmware data to be received by the DFU Target before it needs to send a Packets Receipt Notification. Setting it to 0 will disabled these notifications:</string>
    <string name="dfu_op_code_label">Select Op Code:</string>
    <string name="dfu_soft_device">Soft Device (0x01)</string>
    <string name="dfu_start">Start (0x00)</string>
    <string name="dfu_upload_mode_label">Specify Upload Mode mask:</string>
    <string name="filter_adv_dfu">DFU</string>
    <string name="filter_adv_dfu_legacy">Legacy DFU</string>
    <string name="filter_adv_dfu_secure">Secure DFU</string>
    <string name="filter_adv_eddystone">Eddystone</string>
    <string name="filter_adv_hrm">HRM</string>
    <string name="filter_adv_ibeacon">iBeacon</string>
    <string name="filter_adv_nrfbeacon">nRF Beacon</string>
    <string name="filter_adv_physical_web">Physical Web</string>
    <string name="filter_adv_thingy52">Thingy:52</string>
    <string name="macros_add_conditional_sleep_hint">Empty</string>
    <string name="macros_add_conditional_sleep_label">value of the characteristic is equal to:</string>
    <string name="macros_add_conditional_sleep_timeout_hint">Indefinitely</string>
    <string name="macros_add_conditional_sleep_timeout_label">for maximum (ms, 0 or empty value = no timeout):</string>
    <string name="macros_sleep_if">Sleep if</string>
    <string name="macros_sleep_until">Sleep until</string>
    <string name="menu_action_abort_reliable_write">Abort</string>
    <string name="menu_action_autoconnect">Use autoConnect</string>
    <string name="menu_action_begin_reliable_write">Begin</string>
    <string name="menu_action_bond">Bond</string>
    <string name="menu_action_clone_db">Clone device\'s services</string>
    <string name="menu_action_connect">CONNECT</string>
    <string name="menu_action_disconnect">DISCONNECT</string>
    <string name="menu_action_discover_services">Discover services</string>
    <string name="menu_action_duplicate">Duplicate</string>
    <string name="menu_action_enable_all">Enable CCCDs</string>
    <string name="menu_action_execute_reliable_write">Execute</string>
    <string name="menu_action_export_to_xml">Export to XML</string>
    <string name="menu_action_parse_known_data">Parse known characteristics</string>
    <string name="menu_action_read_all">Read characteristics</string>
    <string name="menu_action_read_rssi">Read remote RSSI</string>
    <string name="menu_action_refresh_cache">Refresh device cache</string>
    <string name="menu_action_reliable_write_title">Reliable write</string>
    <string name="menu_action_remove">Delete</string>
    <string name="menu_action_rename">Rename</string>
    <string name="menu_action_share">Share</string>
    <string name="menu_action_show_log">Show log</string>
    <string name="menu_action_unbond">Delete bond information</string>
    <string name="menu_action_undo">Undo</string>
    <string name="ox">0x</string>
    <string name="settings_about">About</string>
    <string name="settings_category_about">About</string>
    <string name="settings_category_ble">Bluetooth Low Energy</string>
    <string name="settings_category_export">Export</string>
    <string name="settings_category_ui">UI</string>
    <string name="settings_connectivity">Connectivity</string>
    <string name="settings_dfu">DFU options</string>
    <string name="settings_dfu_about">About DFU</string>
    <string name="settings_dfu_about_summary">DFU documentation on Nordic\'s Developer Zone</string>
    <string name="settings_dfu_assume_dfu_mode">External MCU DFU</string>
    <string name="settings_dfu_keep_bond">Keep bond information</string>
    <string name="settings_dfu_number_of_packets_label">Number of packets</string>
    <string name="settings_dfu_packets_receipt_notification_label">Packets receipt notification procedure</string>
    <string name="settings_export">Export options</string>
    <string name="settings_help">Questions &amp; Answers</string>
    <string name="settings_logger">Logger</string>
    <string name="settings_mbr_size">MBR size</string>
    <string name="settings_mbr_size_title">MBR size (default 4096 = 0x1000)</string>
    <string name="settings_santa_mode">Santa mode</string>
    <string name="settings_scanner">Scanner</string>
    <string name="settings_scanning_api">Scanning API</string>
    <string name="settings_scanning_batching">Offloaded scan batching (500ms)</string>
    <string name="settings_scanning_mode">Continuous scanning</string>
    <string name="settings_scanning_mode_continues_summary">Enabled</string>
    <string name="settings_scanning_mode_lollipop">Scanning mode</string>
    <string name="settings_scanning_mode_periodical_summary">2 seconds periods</string>
    <string name="settings_scanning_period">Scanning period</string>
    <string name="settings_theme">Theme</string>
    <string name="settings_tutorial">Tutorial</string>
    <string name="settings_whats_new">What\'s new</string>
</resources>