<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_connect"
        android:orderInCategory="0"
        android:title="@string/menu_action_connect"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_disconnect"
        android:visible="false"
        android:orderInCategory="0"
        android:title="@string/menu_action_disconnect"
        app:showAsAction="always"/>
    <item
        android:icon="@drawable/ic_menu_dfu_light"
        android:id="@+id/action_dfu"
        android:visible="false"
        android:orderInCategory="1"
        android:title="@string/action_dfu"
        app:showAsAction="always"/>
    <item
        android:icon="@drawable/ic_menu_eddystone_light"
        android:id="@+id/action_eddystone_pair"
        android:visible="false"
        android:orderInCategory="1"
        android:title="@string/action_eddystone_add_eik"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_bond"
        android:orderInCategory="5"
        android:title="@string/menu_action_bond"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_unbind"
        android:visible="false"
        android:orderInCategory="5"
        android:title="@string/menu_action_unbond"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_discover_services"
        android:visible="false"
        android:orderInCategory="8"
        android:title="@string/menu_action_discover_services"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_refresh_cache"
        android:visible="false"
        android:orderInCategory="8"
        android:title="@string/menu_action_refresh_cache"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_autoconnect"
        android:orderInCategory="10"
        android:title="@string/menu_action_autoconnect"
        android:checkable="true"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_parse_known_char"
        android:checked="true"
        android:orderInCategory="20"
        android:title="@string/menu_action_parse_known_data"
        android:checkable="true"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_clone"
        android:orderInCategory="30"
        android:title="@string/menu_action_clone_db"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_show_log"
        android:orderInCategory="50"
        android:title="@string/menu_action_show_log"
        app:showAsAction="never"/>
</menu>
