<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:paddingLeft="@dimen/alert_dialog_padding"
    android:paddingTop="@dimen/alert_dialog_padding_top"
    android:paddingRight="@dimen/alert_dialog_padding"
    android:paddingBottom="@dimen/alert_dialog_padding_bottom"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alert_supported_categories_title"/>
    <CheckBox
        android:id="@+id/alert_category_0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alert_category_0"/>
    <CheckBox
        android:id="@+id/alert_category_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alert_category_1"/>
    <CheckBox
        android:id="@+id/alert_category_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alert_category_2"/>
    <CheckBox
        android:id="@+id/alert_category_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alert_category_3"/>
    <CheckBox
        android:id="@+id/alert_category_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alert_category_4"/>
    <CheckBox
        android:id="@+id/alert_category_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alert_category_5"/>
    <CheckBox
        android:id="@+id/alert_category_6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alert_category_6"/>
    <CheckBox
        android:id="@+id/alert_category_7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alert_category_7"/>
    <CheckBox
        android:id="@+id/alert_category_8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alert_category_8"/>
    <CheckBox
        android:id="@+id/alert_category_9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alert_category_9"/>
</LinearLayout>
