<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_undo"
        android:title="@string/menu_action_undo"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_share"
        android:title="@string/menu_action_share"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_export"
        android:title="@string/menu_action_export_to_xml"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_rename"
        android:title="@string/menu_action_rename"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_duplicate"
        android:title="@string/menu_action_duplicate"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_remove"
        android:title="@string/menu_action_remove"
        app:showAsAction="never"/>
</menu>
