<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:entries="@array/settings_scanning_period_entries"
        android:title="@string/settings_scanning_period"
        android:key="setting_scanning_period"
        android:summary="%s"
        android:defaultValue="45"
        android:entryValues="@array/settings_scanning_period_values"/>
    <SwitchPreferenceCompat
        android:title="@string/settings_scanning_mode"
        android:key="settings_scanning_mode"
        android:defaultValue="true"
        android:summaryOn="@string/settings_scanning_mode_continues_summary"
        android:summaryOff="@string/settings_scanning_mode_periodical_summary"/>
    <ListPreference
        android:entries="@array/settings_scanning_api_entries"
        android:title="@string/settings_scanning_api"
        android:key="settings_scanning_api"
        android:summary="%s"
        android:entryValues="@array/settings_scanning_api_values"/>
    <ListPreference
        android:entries="@array/settings_scanning_mode_lollipop_entries"
        android:title="@string/settings_scanning_mode_lollipop"
        android:key="settings_scanning_mode_lollipop"
        android:summary="%s"
        android:defaultValue="2"
        android:entryValues="@array/settings_scanning_mode_lollipop_values"/>
    <SwitchPreferenceCompat
        android:title="@string/settings_scanning_batching"
        android:key="settings_scanning_batching"
        android:defaultValue="false"/>
</androidx.preference.PreferenceScreen>
