<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/backgroundColor"
    android:paddingLeft="@dimen/settings_category_layout_margin"
    android:paddingRight="@dimen/settings_category_layout_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/PreferenceCategoryLayout">
            <TextView
                android:text="@string/settings_category_ble"
                style="@style/PreferenceCategoryTitle"/>
            <TextView
                android:id="@+id/category_scanner"
                android:text="@string/settings_scanner"
                android:drawableLeft="@drawable/ic_nav_scanner_selected"
                style="@style/PreferenceCategory"/>
            <TextView
                android:id="@+id/category_connectivity"
                android:text="@string/settings_connectivity"
                android:drawableLeft="@drawable/ic_nav_connectivity_selected"
                style="@style/PreferenceCategory"/>
            <TextView
                android:id="@+id/category_dfu"
                android:text="@string/settings_dfu"
                android:drawableLeft="@drawable/ic_nav_dfu_selected"
                style="@style/PreferenceCategory"/>
        </LinearLayout>
        <View style="@style/PreferenceCategoryDivider"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/PreferenceCategoryLayout">
            <TextView
                android:text="@string/settings_category_export"
                style="@style/PreferenceCategoryTitle"/>
            <TextView
                android:id="@+id/category_logger"
                android:text="@string/settings_logger"
                android:drawableLeft="@drawable/ic_nav_logger_selected"
                style="@style/PreferenceCategory"/>
            <TextView
                android:id="@+id/category_export"
                android:text="@string/settings_export"
                android:drawableLeft="@drawable/ic_nav_save_selected"
                style="@style/PreferenceCategory"/>
        </LinearLayout>
        <View style="@style/PreferenceCategoryDivider"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/PreferenceCategoryLayout">
            <TextView
                android:text="@string/settings_category_ui"
                style="@style/PreferenceCategoryTitle"/>
            <TextView
                android:id="@+id/category_theme"
                android:text="@string/settings_theme"
                android:drawableLeft="@drawable/ic_nav_theme_selected"
                style="@style/PreferenceCategory"/>
            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/santa_mode"
                android:visibility="gone"
                android:checked="true"
                android:text="@string/settings_santa_mode"
                android:drawableLeft="@drawable/ic_nav_santa_mode"
                style="@style/PreferenceCategory"/>
        </LinearLayout>
        <View style="@style/PreferenceCategoryDivider"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/PreferenceCategoryLayout">
            <TextView
                android:text="@string/settings_category_about"
                style="@style/PreferenceCategoryTitle"/>
            <TextView
                android:id="@+id/category_tutorial"
                android:text="@string/settings_tutorial"
                android:drawableLeft="@drawable/ic_nav_tutorial_selected"
                style="@style/PreferenceCategory"/>
            <TextView
                android:id="@+id/category_tutorial_update"
                android:text="@string/settings_whats_new"
                android:drawableLeft="@drawable/ic_nav_whats_new_selected"
                style="@style/PreferenceCategory"/>
            <TextView
                android:id="@+id/category_help"
                android:text="@string/settings_help"
                android:drawableLeft="@drawable/ic_nav_qaa_selected"
                style="@style/PreferenceCategory"/>
            <TextView
                android:id="@+id/category_about"
                android:text="@string/settings_about"
                android:drawableLeft="@drawable/ic_nav_info_selected"
                style="@style/PreferenceCategory"/>
        </LinearLayout>
        <View style="@style/PreferenceCategoryDivider"/>
    </LinearLayout>
</ScrollView>
