<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:paddingLeft="@dimen/alert_dialog_padding"
        android:paddingTop="@dimen/alert_dialog_padding_top"
        android:paddingRight="@dimen/alert_dialog_padding"
        android:paddingBottom="@dimen/alert_dialog_padding_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dfu_op_code_label"/>
        <Spinner
            android:entries="@array/dfu_op_codes"
            android:id="@+id/value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/size_info"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/dfu_number_of_packets_label"/>
        <EditText
            android:id="@+id/size"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dfu_number_of_packets_hint"
            android:inputType="number"/>
        <RadioGroup
            android:id="@+id/init_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/init_mode_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/dfu_init_mode_label"/>
            <RadioButton
                android:id="@+id/init_mode_none"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/dfu_none"/>
            <RadioButton
                android:id="@+id/init_mode_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dfu_start"/>
            <RadioButton
                android:id="@+id/init_mode_complete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dfu_complete"/>
        </RadioGroup>
        <TextView
            android:id="@+id/upload_mode_info"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/dfu_upload_mode_label"/>
        <CheckBox
            android:id="@+id/soft_device"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dfu_soft_device"/>
        <CheckBox
            android:id="@+id/bootloader"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dfu_bootloader"/>
        <CheckBox
            android:id="@+id/application"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dfu_application"/>
    </LinearLayout>
</ScrollView>
