<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:paddingLeft="@dimen/alert_dialog_padding"
    android:paddingTop="@dimen/alert_dialog_padding_top"
    android:paddingRight="@dimen/alert_dialog_padding"
    android:paddingBottom="@dimen/alert_dialog_padding_bottom"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <RadioButton
        android:id="@+id/option_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/macros_sleep_if"/>
    <RadioButton
        android:id="@+id/option_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/macros_sleep_until"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/macros_add_conditional_sleep_label"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ox"/>
        <EditText
            android:id="@+id/value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/macros_add_conditional_sleep_hint"
            android:imeOptions="flagNoExtractUi"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/macros_add_conditional_sleep_timeout_label"/>
    <EditText
        android:id="@+id/value_timeout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/macros_add_conditional_sleep_timeout_hint"
        android:inputType="number"
        android:imeOptions="flagNoExtractUi"/>
</RadioGroup>
